# FastenerCAD

./: .gitignore  README.md  pyproject.toml
assemblies/: __init__.py  _base.py  anchor.py  bolt_nut.py  washer.py
catalog/: M1.6.json  M10.json  M12.json  M16.json  M2.5.json  M2.json  M20.json  M24.json  M3.json  M30.json  M36.json  M4.json  M42.json  M48.json  M5.json  M56.json  M6.json  M64.json  M8.json
cli/: __init__.py  __main__.py
common/: __init__.py  base.py  dimensions.py  materials.py  tolerances.py  utils.py
examples/: generate_all.py
export/: __init__.py  dxf.py  step.py  stl.py
scripts/: generate_catalog.py
standards/: DIN933.py  DIN976.py  ISO4014.py  ISO4017.py  ISO4032.py  ISO7089.py  JIS_B1180.py  __init__.py  _hex_bolt.py
tests/: test_assemblies.py  test_catalog.py  test_cli.py  test_export.py  test_parts.py  test_real_threads.py  test_threads.py
threads/: __init__.py  coarse.py  fine.py  metric.py
