[project]
name = "fastenercad"
version = "0.1.0"
description = "Production-quality parametric CAD library for ISO/DIN/JIS mechanical fasteners built on CADQuery."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "FastenerCAD Contributors" }]
keywords = ["cad", "cadquery", "fasteners", "bolt", "nut", "iso", "din", "jis", "step", "stl", "dxf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "cadquery>=2.4",
]

[project.urls]
Homepage = "https://github.com/fastenercad/fastenercad"
Repository = "https://github.com/fastenercad/fastenercad"

[project.scripts]
fastenercad = "cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "threads", "standards", "assemblies", "export", "cli"]
# Ship the dimension catalog as package data so installed wheels stay data-driven.
force-include = { "catalog" = "fastenercad_catalog" }

# ---------------------------------------------------------------------------
# Tooling configuration (kept inline so no extra dotfiles are required).
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Sensible strict-but-practical rule set for a typed library.
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["N999"]  # allow non-PEP8 module names (ISO4014, JIS_B1180, ...)

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
# CADQuery ships no type stubs; silence import errors without loosening our code.
[[tool.mypy.overrides]]
module = ["cadquery.*", "cadquery"]
ignore_missing_imports = true

[tool.pytest.ini_options]
# Flat top-level packages resolve without an editable install during tests.
pythonpath = ["."]
testpaths = ["tests"]
# Skip slow (real-thread) tests by default; run them with `pytest -m slow`.
addopts = "-ra -m 'not slow'"
markers = [
    "slow: slower tests that build real (helical) thread geometry",
]
